# petromanager

./: README.md  index.html  package.json
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/confirmation/: confirmation.tsx
src/components/employee-form/: employee-form.tsx  styles.scss
src/components/header/: header.tsx
src/config/: modules.d.ts
src/pages/home/: home.tsx
src/pages/summary/: summary.tsx
src/routes/: router.tsx
src/services/: employee.ts
src/styles/: colors.scss  global.scss
