[package]
name = "petro-manager"
version = "0.0.0"
authors = ["Brandon Pinto"]
license = "GPL-3.0"
repository = "https://gitlab.com/brandonpinto/petromanager"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["shell-open", "windows7-compat"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-sqlite = { git = "https://github.com/lzdyes/tauri-plugin-sqlite", tag = "v0.1.1" }

[features]
custom-protocol = ["tauri/custom-protocol"]
